# toddler-claude

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml  publish-image.yml
docs/: SECURITY.md  SETUP.md  TODDLER_QUICKSTART.md
remote/: Dockerfile  boot.sh  claude-wrapper.sh  firewall.sh  fly.toml  pg-init.sh  welcome.txt
scripts/: gen-icons.py  install-and-shortcut.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_setup.rs  cli_test.rs  commands.rs  credentials.rs  fly.rs  fly_setup.rs  github_oauth.rs  main.rs  session.rs  tool_discovery.rs
src/components/: Home.tsx  SessionView.tsx  Setup.tsx
src/styles/: app.css
template/: README.md
template/.claude/: settings.json
template/.github/: CODEOWNERS
template/.github/workflows/: ios-build.yml  pr-guard.yml  secret-scan.yml
