[package]
name = "toddler-claude"
version = "0.1.0"
description = "Toddler-proof remote Claude coding sessions"
authors = ["WaltherMuurmans"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
rand = "0.8"
base64 = "0.22"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
keyring = "3"
log = "0.4"
env_logger = "0.11"
dirs = "5"
which = "6"
webbrowser = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
